fix text align

--- a/src/containers/ListingPage/ListingPage.scss
+++ b/src/containers/ListingPage/ListingPage.scss
@@ -784,6 +784,7 @@
   color: white;
   z-index: 2;
   font-size: 20px;
+  text-align: center;
 
   @media (--viewportMedium) {
     top: 20px;
